<resources>
    <string name="app_name">Menu Nasi Goreng</string>
    <string name="nasi_goreng_name">List Nasi Goreng</string>
    <string name="detail">Detail</string>
    <string name="btn_detail">Lebih Lanjut</string>
    <string name="btn_beli">Totalkan</string>
    <string name="checkout">Beli Sekarang!</string>
    <string name="checkout_now">Beli</string>
    <string name="harga">Harga Jual</string>
    <string name="beli_satuan">Beli (dalam satuan)</string>
    <string name="transaksi_selesai">Transaksi Berhasil.</string>
    <string name="kembali">Kembali ke Halaman Awal</string>
    <string name="total_yang_harus_dibayar">Total yang harus dibayar:</string>
    <string name="placeholder_harga_disini">placeholder harga disini</string>
    <string name="angka_saja">Angka saja</string>
    <string name="alamat">Alamat:</string>
    <string name="kelurahan">Kelurahan:</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="tanya_alamat">Apakah alamat sudah benar?</string>
</resources>