<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Atas Nama:"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/atas_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alamat"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/alamat_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kelurahan"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/kelurahan_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <Button
        android:id="@+id/beli_sekarang_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkout_now"/>
</LinearLayout>
