<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_buy_get"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/nasi_goreng_aceh"
        android:scaleType="fitXY"/>

    <TextView
        android:id="@+id/beli_nasgor_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nasi_goreng_name"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/harga_beli"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/harga"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Beli (Dalam satuan)"/>

    <EditText
        android:id="@+id/edt_length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:lines="1" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_beli" />
</LinearLayout>