<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tanya_alamat"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/getAtasNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="asd"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/getAlamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="asdad"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/getKelurahan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ddd"
        android:textSize="16sp"
        android:layout_marginTop="10dp"/>
    <LinearLayout
        android:id="@+id/layout_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/cancel_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tidak"
            android:textSize="12sp" />
        <Button
            android:id="@+id/yes_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ya"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>